# Sun-Sensor-Calibration

./: README.md
full_sat_data/: plot.py  (+14 more)
sun-sensor-simulator/: CMakeLists.txt  compile_commands.json  main.cpp  sun_sensor.cpp  sun_sensor.h  sun_sensor_data_parser.h
sun-sensor-simulator/alignment/: angle_corrector.cpp  angle_corrector.h  batch_estimator.cpp  batch_estimator.h  data_reader.cpp  data_reader.h  ekf.cpp  ekf.h  main.cpp  sat_model.cpp  sat_model.h  vasco.cpp  vasco.h
sun-sensor-simulator/lut/: b-spline.cpp  b-spline.h  c-spline.cpp  c-spline.h  lut.cpp  lut.h
sun-sensor-simulator/math/: matlib.cpp  matlib.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h
sun-sensor-simulator/plots/: ALL SENSOR MISALIGNMENT -_covariance_matrix.eps  ALL SENSOR MISALIGNMENT -_mag_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_xm_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_xp_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_ym_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_yp_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_zm_misalignment.eps  ALL SENSOR MISALIGNMENT -_ss_zp_misalignment.eps  ALL SENSOR MISALIGNMENT -residuals.eps  MISALIGNMENT X-Z-X -_covariance_matrix.eps  MISALIGNMENT X-Z-X -_mag_misalignment.eps  MISALIGNMENT X-Z-X -_ss_xm_misalignment.eps  MISALIGNMENT X-Z-X -_ss_xp_misalignment.eps  MISALIGNMENT X-Z-X -_ss_ym_misalignment.eps  MISALIGNMENT X-Z-X -_ss_yp_misalignment.eps  MISALIGNMENT X-Z-X -_ss_zm_misalignment.eps  MISALIGNMENT X-Z-X -_ss_zp_misalignment.eps  MISALIGNMENT X-Z-X -residuals.eps  MISALIGNMENT Y-X-Y-X -_covariance_matrix.eps  MISALIGNMENT Y-X-Y-X -_mag_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_xm_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_xp_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_ym_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_yp_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_zm_misalignment.eps  MISALIGNMENT Y-X-Y-X -_ss_zp_misalignment.eps  MISALIGNMENT Y-Z-Y -_covariance_matrix.eps  MISALIGNMENT Y-Z-Y -_mag_misalignment.eps  (+56 more)
(+103 files in other folders)
